# fantasuh-league-app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: nightly.yml  weekly-recap.yml
.streamlit/: config.toml
app/: Home.py
app/lib/: draft_roi.py  expected_wins.py  faab_roi.py  facts.py  lineup_efficiency.py  playoff_odds.py  recap_llm.py  streamlit_utils.py  supa.py  yahoo_client.py
app/pages/: 1_Luck_and Expected_Wins.py  1_Weekly_Recap.py  2_Lineup_Efficiency.py  3_FAAB_ROI.py  4_Draft_ROI.py  4_Luck_and Expected_Wins.py  4_Weekly_Recap.py  5_Draft_ROI.py  5_Luck_and Expected_Wins.py  5_Weekly_Recap.py
etl/: compute_metrics.py  generate_weekly_recap.py  yahoo_backfill.py
scripts/: populate_draft_picks.py  pull_all_players.py  yahoo_oauth_setup.py
sql/: 00_schema.sql  10_indices.sql  20_views.sql
sql/sql/: 00_schema.sql
